--- a/pages/linhas.html
+++ b/pages/linhas.html
@@ -3,33 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TUSS &bull; Início</title>
+  <title>TUSS &bull; Linhas</title>
   <link rel="icon" href="../assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
-
-  <!-- Fonte Funnel Display -->
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-  <!-- Navbar -->
   <div id="navbar-container"></div>
 
-  <!-- Conteúdo principal -->
   <main class="main-content">
     <section class="hero-section">
       <div class="hero-text">
         <h1>Em Testes</h1>
-        <p>TUSS &bull; Transportes Urbanos de São Sebastião.</p>
+        <p>TUSS &bull;; Transportes Urbanos de São Sebastião.</p>
       </div>
     </section>
   </main>
 
-  <!-- Footer -->
   <div id="footer-container"></div>
 
-  <!-- JS -->
   <script src="../scripts/script.js"></script>
 </body>
 </html>
