new file:   404.html 	modified:   pages/homepage.html 	modified:   pages/linhas.html 	modified:   styles/styles.css

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -18,8 +18,8 @@
 
   <!-- Conteúdo principal -->
   <main class="main-content">
-    <section class="hero-section">
-      <div class="hero-text">
+    <section class="homepage-section">
+      <div class="homepage-text">
         <h1>Em Testes</h1>
         <p>TUSS &bull; Transportes Urbanos de São Sebastião.</p>
       </div>
