--- a/pages/linhas.html
+++ b/pages/linhas.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/styles.css">
 </head>
+
 <body>
   <div id="navbar-container"></div>
 
@@ -15,13 +16,12 @@
     <section class="hero-section">
       <div class="hero-text">
         <h1>Em Testes</h1>
-        <p>TUSS &bull;; Transportes Urbanos de São Sebastião.</p>
+        <p>TUSS &bull; Transportes Urbanos de São Sebastião.</p>
       </div>
     </section>
   </main>
 
   <div id="footer-container"></div>
-
   <script src="../scripts/script.js"></script>
 </body>
 </html>
