new file:   assets/game-screenshots/depot-img-1.png 	modified:   pages/homepage.html 	modified:   pages/lines.html 	modified:   styles/styles.css

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -16,7 +16,7 @@
     <section class="homepage-section">
       <div class="homepage-text">
         <h1>Em Testes</h1>
-        <p>TUSS &bull; Transportes Urbanos de São Sebastião.</p>
+        <p>TUSS &bull; Transportes Urbanos de São Sebastião</p>
       </div>
     </section>
   </main>
