modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Redirecionando…</title>
 </head>
 <body>
-  Se não fores redirecionado <a href="pages/index.html">clica aqui</a>.
+  Se não fores redirecionado <a href="pages/homepage.html">clica aqui</a>.
 </body>
 </html>
