modified:   pages/lines.html#	modified:   styles/styles.css

--- a/pages/lines.html
+++ b/pages/lines.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TUSS • Linhas</title>
+  <title>TUSS &bull; Linhas</title>
   <link rel="icon" href="../assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
-  <!--<link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">-->
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/styles.css">
 </head>
 
