modified:   404.html 	modified:   components/footer.html 	modified:   components/navbar.html 	modified:   index.html 	renamed:    pages/homepage.html -> pages/pt/index.html 	renamed:    pages/lines.html -> pages/pt/linhas.html 	modified:   scripts/script.js 	modified:   styles/styles.css

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=pages/index.html">
+  <meta http-equiv="refresh" content="0; url=pages/pt/index.html">
   <title>Redirecionando…</title>
 </head>
 <body>
-  Se não fores redirecionado <a href="pages/homepage.html">clica aqui</a>.
+  Se não fores redirecionado <a href="pages/pt/index.html">clica aqui</a>.
 </body>
 </html>
