--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Erro</title>
+  <title>Erro 404 - Página Não Encontrada</title>
   <link rel="icon" href="./assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
   <link rel="stylesheet" href="styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -13,30 +13,72 @@
   <header>
     <nav class="navbar">
       <div class="navbar-container">
-        <div class="navbar-logo">
-          <a href="pages/homepage.html"><img src="assets/tuss-logos/tuss-white.svg" alt="TUSS Logo"></a>
+        <a href="../pages/index.html" class="navbar-logo">
+          <img src="../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
+        </a>
+
+        <div class="navbar-toggle" id="navbar-toggle">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
-        <ul class="navbar-links">
-          <li><a href="pages/homepage.html">Início</a></li>
-          <li><a href="#">Linhas</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Contactos</a></li>
+
+        <ul class="navbar-links" id="navbar-links">
+          <li class="has-submenu">
+            <a href="#">Viajar</a>
+            <ul class="submenu">
+              <li><a href="#">Linhas e Horários</a></li>
+              <li><a href="#">Planear Viagem</a></li>
+              <li><a href="#">Paragens</a></li>
+              <li><a href="#">Alterações de Serviço</a></li>
+              <li><a href="#">Tarifário</a></li>
+              <li><a href="#">Acessibilidade</a></li>
+            </ul>
+          </li>
+          <li class="has-submenu">
+            <a href="#">Os TUSS</a>
+            <ul class="submenu">
+              <li><a href="#">Sobre Nós</a></li>
+              <li><a href="#">Sustentabilidade</a></li>
+              <li><a href="#">Projectos Cofinanciados</a></li>
+              <li><a href="#">Certificados e Prémios</a></li>
+            </ul>
+          </li>
+          <li class="has-submenu">
+            <a href="#">Cultura e Pessoas</a>
+            <ul class="submenu">
+              <li><a href="#">Cultura Organizacional</a></li>
+              <li><a href="#">Recrutamento</a></li>
+            </ul>
+          </li>
+          <li class="has-submenu">
+            <a href="#">Apoio e Contactos</a>
+            <ul class="submenu">
+              <li><a href="#">Fale Connosco</a></li>
+              <li><a href="#">Preguntas Frequentes</a></li>
+              <li><a href="#">Empresas</a></li>
+              <li><a href="#">Media</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
   </header>
 
-  <main style="text-align: center; padding: 100px 20px;">
-    <h1>404 - Página Não Encontrada</h1>
-    <p>A página que procura não existe ou foi movida.</p>
-    <a href="pages/homepage.html" style="display:inline-block; margin-top:20px; padding:10px 20px; background:#B1D566; color:white; text-decoration:none; border-radius:8px;">Voltar à página inicial</a>
+  <main class="homepage-section" style="background: #f4f4f4; justify-content: center; align-items: center; text-align: center; padding: 100px 20px; flex-direction: column;">
+    <h1 style="font-size: 4rem; margin-bottom: 20px; color:#B1D566;">404</h1>
+    <h2 style="font-size: 2rem; margin-bottom: 20px;">Página Não Encontrada</h2>
+    <p style="font-size: 1.1rem; margin-bottom: 30px; color: #555;">A página que procura não existe ou foi movida.</p>
+    <a href="pages/homepage.html" style="display:inline-block; padding:12px 25px; background:#B1D566; color:white; text-decoration:none; border-radius:8px; font-weight:600; transition: background 0.3s ease;">
+      Voltar à página inicial
+    </a>
   </main>
 
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="assets/tuss-logos/tuss-white.svg" alt="TUSS Logo">
-        <p>Transportes Urbanos de São Sebastião</p>
+        <img src="assets/tuss-logos/tuss-all-white.png" alt="TUSS Logo">
+        <p>Desde 2024</p>
       </div>
       <div class="footer-column">
         <h4>Empresa</h4>
