--- a/pages/pt/alteracoes-de-servico.html
+++ b/pages/pt/alteracoes-de-servico.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Erro 404 - Página Não Encontrada</title>
-  <link rel="icon" href="./assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
-  <link rel="stylesheet" href="styles/styles.css">
+
+  <meta http-equiv="refresh" content="0; url=../../404.html">
+
+  <title>TUSS &bull; Erro 404</title>
+  <link rel="icon" href="../../assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
+  <link rel="stylesheet" href="../../styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -13,8 +16,8 @@
   <header>
     <nav class="navbar">
       <div class="navbar-container">
-        <a href="../pages/pt/index.html" class="navbar-logo">
-          <img src="../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
+        <a href="../../../pages/pt/index.html" class="navbar-logo">
+          <img src="../../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
         </a>
 
         <div class="navbar-toggle" id="navbar-toggle">
@@ -27,12 +30,12 @@
           <li class="has-submenu">
             <a href="#">Viajar</a>
             <ul class="submenu">
-              <li><a href="#">Linhas e Horários</a></li>
-              <li><a href="#">Planear Viagem</a></li>
-              <li><a href="#">Paragens</a></li>
-              <li><a href="#">Alterações de Serviço</a></li>
-              <li><a href="#">Tarifário</a></li>
-              <li><a href="#">Acessibilidade</a></li>
+              <li><a href="../../pages/pt/linhas.html">Linhas e Horários</a></li>
+              <li><a href="../../pages/pt/planear-viagem.html">Planear Viagem</a></li>
+              <li><a href="../../pages/pt/paragem.html">Paragens</a></li>
+              <li><a href="../../pages/pt/alteracoes-de-servico.html">Alterações de Serviço</a></li>
+              <li><a href="../../pages/pt/tarifario.html">Tarifário</a></li>
+              <li><a href="../../pages/pt/acessibilidade.html">Acessibilidade</a></li>
             </ul>
           </li>
           <li class="has-submenu">
@@ -77,7 +80,7 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="./assets/tuss-logos/tuss-all-white.png" alt="TUSS Logo">
+        <img src="../../assets/tuss-logos/tuss-all-white.png" alt="TUSS Logo">
         <p>Desde 2024</p>
       </div>
       <div class="footer-column">
