--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Erro 404 - Página Não Encontrada</title>
+  <title>TUSS &bull; Not Found</title>
   <link rel="icon" href="./assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
   <link rel="stylesheet" href="styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -27,12 +27,12 @@
           <li class="has-submenu">
             <a href="#">Viajar</a>
             <ul class="submenu">
-              <li><a href="#">Linhas e Horários</a></li>
-              <li><a href="#">Planear Viagem</a></li>
-              <li><a href="#">Paragens</a></li>
-              <li><a href="#">Alterações de Serviço</a></li>
-              <li><a href="#">Tarifário</a></li>
-              <li><a href="#">Acessibilidade</a></li>
+              <li><a href="../../pages/pt/linhas.html">Linhas e Horários</a></li>
+              <li><a href="../../pages/pt/planear-viagem.html">Planear Viagem</a></li>
+              <li><a href="../../pages/pt/paragem.html">Paragens</a></li>
+              <li><a href="../../pages/pt/alteracoes-de-servico.html">Alterações de Serviço</a></li>
+              <li><a href="../../pages/pt/tarifario.html">Tarifário</a></li>
+              <li><a href="../../pages/pt/acessibilidade.html">Acessibilidade</a></li>
             </ul>
           </li>
           <li class="has-submenu">
