modified:   components/navbar.html 	new file:   pages/en/accessibility.html 	new file:   pages/en/index.html 	new file:   pages/en/lines.html 	new file:   pages/en/plan-a-trip.html 	new file:   pages/en/service-changes.html 	new file:   pages/en/stop.html 	new file:   pages/en/tariff.html 	modified:   pages/pt/acessibilidade.html 	modified:   pages/pt/alteracoes-de-servico.html 	modified:   pages/pt/index.html 	modified:   pages/pt/linhas.html 	modified:   pages/pt/paragem.html 	modified:   pages/pt/planear-viagem.html 	modified:   pages/pt/tarifario.html 	new file:   scripts/lang-switch.js 	modified:   styles/styles.css

--- a/pages/en/index.html
+++ b/pages/en/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-PT">
+<html lang="en-GB">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TUSS &bull; Início</title>
+  <title>TUSS &bull; Home</title>
   <link rel="icon" href="../../assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../styles/styles.css">
@@ -15,7 +15,7 @@
   <main class="main-content">
     <section class="homepage-section">
       <div class="homepage-text">
-        <h1>Em Testes</h1>
+        <h1>In Testing</h1>
         <p>TUSS &bull; Transportes Urbanos de São Sebastião</p>
       </div>
     </section>
