--- a/pages/en/lines.html
+++ b/pages/en/lines.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TUSS &bull; Linhas</title>
+  <title>TUSS &bull; Lines</title>
   <link rel="icon" href="../../assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../styles/styles.css">
@@ -14,8 +14,8 @@
 
   <main class="lines-main">
     <section class="lines-header">
-      <h1>As nossas linhas</h1>
-      <p>Escolha a linha para ver os horários e percursos.</p>
+      <h1>Our lines</h1>
+      <p>Choose the line to see timetables and routes.</p>
       <input type="text" id="line-search" placeholder="Pesquisar linha ou destino..." />
     </section>
 
