modified:   components/footer.html 	modified:   components/navbar.html 	modified:   pages/en/accessibility.html 	modified:   pages/en/index.html 	modified:   pages/en/lines.html 	modified:   pages/en/plan-a-trip.html 	modified:   pages/en/service-changes.html 	modified:   pages/en/stop.html 	modified:   pages/en/tariff.html 	modified:   pages/pt/acessibilidade.html 	modified:   pages/pt/alteracoes-de-servico.html 	modified:   pages/pt/index.html 	modified:   pages/pt/linhas.html 	modified:   pages/pt/paragem.html 	modified:   pages/pt/planear-viagem.html 	modified:   pages/pt/tarifario.html 	modified:   scripts/lang-switch.js 	modified:   scripts/script.js

--- a/pages/en/accessibility.html
+++ b/pages/en/accessibility.html
@@ -111,6 +111,6 @@
       <p>&copy; 2025 TUSS &bull; Transportes Urbanos de São Sebastião. Todos os direitos reservados.</p>
     </div>
   </footer>
-  <script src="../../scripts/lang-switch.js"></script>
+  <script src="../../scripts/lang-switch.js" defer></script>
 </body>
 </html>
