--- a/pages/en/lines.html
+++ b/pages/en/lines.html
@@ -16,7 +16,7 @@
     <section class="lines-header">
       <h1>Our lines</h1>
       <p>Choose the line to see timetables and routes.</p>
-      <input type="text" id="line-search" placeholder="Pesquisar linha ou destino..." />
+      <input type="text" id="line-search" placeholder="Search route or destination..." />
     </section>
 
     <section class="lines-grid" id="lines-grid">
@@ -78,6 +78,6 @@
 
   <div id="footer-container"></div>
   <script src="../../scripts/script.js"></script>
-  <script src="../../scripts/lang-switch.js"></script>
+  <script src="../../scripts/lang-switch.js" defer></script>
 </body>
 </html>
