--- a/pages/pt/index.html
+++ b/pages/pt/index.html
@@ -23,6 +23,6 @@
 
   <div id="footer-container"></div>
   <script src="../../scripts/script.js"></script>
-  <script src="../../scripts/lang-switch.js"></script>
+  <script src="../../scripts/lang-switch.js" defer></script>
 </body>
 </html>
