--- a/pages/pt/paragem.html
+++ b/pages/pt/paragem.html
@@ -111,6 +111,6 @@
       <p>&copy; 2025 TUSS &bull; Transportes Urbanos de São Sebastião. Todos os direitos reservados.</p>
     </div>
   </footer>
-  <script src="../../scripts/lang-switch.js"></script>
+  <script src="../../scripts/lang-switch.js" defer></script>
 </body>
 </html>
