--- a/pages/en/index.html
+++ b/pages/en/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TUSS &bull; Home</title>
-  <link rel="icon" href="../../assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
+  <link rel="icon" href="/assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../../styles/styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
   </main>
 
   <div id="footer-container"></div>
-  <script src="../../scripts/script.js"></script>
-  <script src="../../scripts/lang-switch.js" defer></script>
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/lang-switch.js" defer></script>
 </body>
 </html>
