modified:   pages/pt/index.html 	new file:   scripts/csv-loader.js 	modified:   scripts/line-loader.js 	modified:   styles/styles.css

--- a/pages/pt/index.html
+++ b/pages/pt/index.html
@@ -17,6 +17,9 @@
       <div class="homepage-text">
         <h1>Em Testes</h1>
         <p>TUSS &bull; Transportes Urbanos de São Sebastião</p>
+        <!--
+        <p><span data-csv="9,1"></span></p>
+        -->
       </div>
     </section>
   </main>
@@ -24,5 +27,6 @@
   <div id="footer-container"></div>
   <script src="/scripts/script.js"></script>
   <script src="/scripts/lang-switch.js" defer></script>
+  <script src="/scripts/csv-loader.js" data-csv-path="/data/data.csv"></script>
 </body>
 </html>
