--- a/pages/pt/linhas.html
+++ b/pages/pt/linhas.html
@@ -85,9 +85,11 @@
   </main>
 
   <div id="footer-container"></div>
-  <script src="/scripts/script.js"></script>
   <script src="/scripts/lang-switch.js" defer></script>
-  <script src="/scripts/line-loader.js"></script>
-
+  <script>window.CSV_URL = '/data/data.csv';</script>
+  <script src="/scripts/csv-loader.js" defer></script>
+  <script src="/scripts/line-mapper.js" defer></script>
+  <script src="/scripts/line-loader.js" defer></script>
+  <script src="/scripts/script.js" defer></script>
 </body>
 </html>
