--- a/pages/pt/linha.html
+++ b/pages/pt/linha.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Linha</title>
-  <link rel="stylesheet" href="../../styles/styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
   <div id="navbar-container"></div>
@@ -18,9 +18,9 @@
 
   <!-- Scripts -->
   <script>window.CSV_URL = "../../data/data.csv";</script>
-  <script src="../../scripts/csv-loader.js" defer></script>
-  <script src="../../scripts/line-mapper.js" defer></script>
-  <script src="../../scripts/line-loader.js" defer></script>
-  <script src="../../scripts/script.js" defer></script>
+  <script src="/scripts/csv-loader.js" defer></script>
+  <script src="/scripts/line-mapper.js" defer></script>
+  <script src="/scripts/line-loader.js" defer></script>
+  <script src="/scripts/script.js" defer></script>
 </body>
 </html>
