--- a/pages/pt/linha.html
+++ b/pages/pt/linha.html
@@ -8,10 +8,12 @@
 <body>
   <div id="navbar-container"></div>
 
-  <main>
-    <h1 id="line-title">Linha</h1>
-    <button id="direction-switch">Ver Volta</button>
-    <ul id="line-stops"></ul>
+  <main class="linha-container">
+    <h1 id="linha-titulo"></h1>
+    <button id="toggle-sentido">Mudar Sentido</button>
+    
+    <section id="paragens-container"></section>
+    <section id="horarios-container"></section>
   </main>
 
   <div id="footer-container"></div>
@@ -22,5 +24,6 @@
   <script src="/scripts/line-mapper.js" defer></script>
   <script src="/scripts/line-loader.js" defer></script>
   <script src="/scripts/script.js" defer></script>
+  <script src="/scripts/linha.js" defer></script>
 </body>
 </html>
