new file:   assets/game-screenshots/bus-4k.png 	renamed:    scripts/csv-loader.js -> old-scripts-do-not-use/csv-loader.js 	new file:   old-scripts-do-not-use/line-csv-loader.js 	renamed:    scripts/line-loader.js -> old-scripts-do-not-use/line-loader.js 	new file:   old-scripts-do-not-use/line-mapper.js 	new file:   old-scripts-do-not-use/line-renderer.js 	new file:   old-scripts-do-not-use/linha.js 	modified:   pages/pt/linha.html 	modified:   pages/pt/linhas.html 	deleted:    scripts/line-mapper.js   deleted:    scripts/linha.js 	modified:   styles/styles.css

--- a/pages/pt/linha.html
+++ b/pages/pt/linha.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-PT">
 <head>
   <meta charset="UTF-8">
-  <title>Linha</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TUSS &bull; Linhas</title>
+  <link rel="icon" href="/assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/styles.css">
 </head>
+
 <body>
   <div id="navbar-container"></div>
 
-  <main class="linha-container">
-    <h1 id="linha-titulo"></h1>
-    <button id="toggle-sentido">Mudar Sentido</button>
-    
-    <section id="paragens-container"></section>
-    <section id="horarios-container"></section>
-  </main>
+  
 
   <div id="footer-container"></div>
-
-  <!-- Scripts -->
-  <script>window.CSV_URL = "../../data/data.csv";</script>
-  <script src="/scripts/csv-loader.js" defer></script>
-  <script src="/scripts/line-mapper.js" defer></script>
-  <script src="/scripts/line-loader.js" defer></script>
+  
+  <script src="/scripts/lang-switch.js" defer></script>
   <script src="/scripts/script.js" defer></script>
-  <script src="/scripts/linha.js" defer></script>
 </body>
 </html>
