--- a/pages/pt/linha.html
+++ b/pages/pt/linha.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-PT">
+<html lang="pt">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TUSS &bull; Linhas</title>
+  <title>TUSS &bull; Linha</title>
   <link rel="icon" href="/assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/styles.css">
 </head>
-
 <body>
   <div id="navbar-container"></div>
 
-  
+  <main>
+    <h1 id="line-title">Linha</h1>
+    <button id="direction-switch">Ver Volta</button>
+    <ul id="line-stops"></ul>
+  </main>
 
   <div id="footer-container"></div>
-  
+
   <script src="/scripts/lang-switch.js" defer></script>
+  <script>window.CSV_URL = '/data/data.csv';</script>
+  <script src="/scripts/csv-loader.js" defer></script>
+  <script src="/scripts/line-mapper.js" defer></script>
+  <script src="/scripts/line-loader.js" defer></script>
   <script src="/scripts/script.js" defer></script>
 </body>
 </html>
