modified:   pages/pt/linha.html 	modified:   scripts/line-loader.js 	new file:   styles/linha.css

--- a/pages/pt/linha.html
+++ b/pages/pt/linha.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="/assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/linha.css">
 </head>
 <body>
   <div id="navbar-container"></div>
