deleted:    assets/fonts/papyrus.ttf 	modified:   pages/en/index.html 	modified:   pages/en/lines.html 	modified:   pages/pt/index.html 	modified:   pages/pt/linha.html 	modified:   pages/pt/linhas.html 	new file:   styles/components/footer.css 	new file:   styles/components/navbar.css 	new file:   styles/homepage-index.css 	new file:   styles/line-page.css 	new file:   styles/lines-page.css 	modified:   styles/styles.css

--- a/pages/en/index.html
+++ b/pages/en/index.html
@@ -6,7 +6,11 @@
   <title>TUSS &bull; Home</title>
   <link rel="icon" href="/assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/components/navbar.css">
+  <link rel="stylesheet" href="/styles/components/footer.css">
+  <link rel="stylesheet" href="/styles/homepage-index.css">
 </head>
 
 <body>
