--- a/pages/pt/index.html
+++ b/pages/pt/index.html
@@ -6,7 +6,11 @@
   <title>TUSS &bull; Início</title>
   <link rel="icon" href="/assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/components/navbar.css">
+  <link rel="stylesheet" href="/styles/components/footer.css">
+  <link rel="stylesheet" href="/styles/homepage-index.css">
 </head>
 
 <body>
@@ -17,9 +21,6 @@
       <div class="homepage-text">
         <h1>Em Testes</h1>
         <p>TUSS &bull; Transportes Urbanos de São Sebastião</p>
-        <!--
-        <p><span data-csv="9,1"></span></p>
-        -->
       </div>
     </section>
   </main>
