--- a/404-en.html
+++ b/404-en.html
@@ -5,8 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TUSS &bull; Not Found</title>
   <link rel="icon" href="/assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
-  <link rel="stylesheet" href="styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;700&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/components/navbar.css">
+  <link rel="stylesheet" href="/styles/components/footer.css">
 </head>
 
 <body>
@@ -111,5 +114,11 @@
       <p>&copy; 2025 TUSS &bull; All rights reserved.</p>
     </div>
   </footer>
+
+  <script>window.CSV_URL = '/data/data.csv';</script>
+  <script src="/scripts/csv-loader.js" defer></script>
+  <script src="/scripts/line-mapper.js" defer></script>
+  <script src="/scripts/line-loader.js" defer></script>
+  <script src="/scripts/script.js" defer></script>
 </body>
 </html>
