--- a/404-en.html
+++ b/404-en.html
@@ -76,7 +76,7 @@
     <h1 style="font-size: 4rem; margin-bottom: 20px; color:#B1D566;">404</h1>
     <h2 style="font-size: 2rem; margin-bottom: 20px;">Page Not Found</h2>
     <p style="font-size: 1.1rem; margin-bottom: 30px; color: #555;">The page you are looking for does not exist or has been moved.</p>
-    <a href="pages/homepage.html" style="display:inline-block; padding:12px 25px; background:#B1D566; color:white; text-decoration:none; border-radius:8px; font-weight:600; transition: background 0.3s ease;">
+    <a href="pages/pt/index.html" style="display:inline-block; padding:12px 25px; background:#B1D566; color:white; text-decoration:none; border-radius:8px; font-weight:600; transition: background 0.3s ease;">
       Back to homepage
     </a>
   </main>
