--- a/404-pt.html
+++ b/404-pt.html
@@ -74,9 +74,9 @@
 
   <main class="homepage-section" style="background: #f4f4f4; justify-content: center; align-items: center; text-align: center; padding: 100px 20px; flex-direction: column;">
     <h1 style="font-size: 4rem; margin-bottom: 20px; color:#B1D566;">404</h1>
-    <h2 style="font-size: 2rem; margin-bottom: 20px;">Página Não Encontrada</h2>
+    <h2 style="font-size: 2rem; margin-bottom: 20px;">Pergunta Não Encontrada</h2>
     <p style="font-size: 1.1rem; margin-bottom: 30px; color: #555;">A página que procura não existe ou foi movida.</p>
-    <a href="pages/homepage.html" style="display:inline-block; padding:12px 25px; background:#B1D566; color:white; text-decoration:none; border-radius:8px; font-weight:600; transition: background 0.3s ease;">
+    <a href="pages/pt/index.html" style="display:inline-block; padding:12px 25px; background:#B1D566; color:white; text-decoration:none; border-radius:8px; font-weight:600; transition: background 0.3s ease;">
       Voltar à página inicial
     </a>
   </main>
