modified:   pages/pt/linha.html 	modified:   pages/pt/paragem.html 	modified:   scripts/script.js

--- a/pages/pt/paragem.html
+++ b/pages/pt/paragem.html
@@ -3,16 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <meta http-equiv="refresh" content="0; url=/404-pt.html">
-
-  <title>TUSS &bull; Erro 404</title>
+  <title>TUSS &bull; Linha</title>
   <link rel="icon" href="/assets/tuss-logos/tuss-stripes.png" type="image/x-icon">
-  <link rel="stylesheet" href="/styles/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;700&display=swap" rel="stylesheet">
-</head>
-
-<body>
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   
+  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/components/navbar.css">
+  <link rel="stylesheet" href="/styles/components/footer.css">
+  <link rel="stylesheet" href="/styles/line-page.css">
+</head>
+<body>
+  <div id="navbar-container"></div>
+
+  <main>
+    
+  </main>
+
+  <div id="footer-container"></div>
+
+  <script src="/scripts/lang-switch.js" defer></script>
+  <script>window.CSV_URL = '/data/data.csv';</script>
+  <script src="/scripts/csv-loader.js" defer></script>
+  <script src="/scripts/line-mapper.js" defer></script>
+  <script src="/scripts/line-loader.js" defer></script>
+  <script src="/scripts/script.js" defer></script>
 </body>
 </html>
