--- a/pages/pt/index.html
+++ b/pages/pt/index.html
@@ -29,5 +29,6 @@
   <script src="/scripts/script.js"></script>
   <script src="/scripts/lang-switch.js" defer></script>
   <script src="/scripts/csv-loader.js" data-csv-path="/data/data.csv"></script>
+  <script src="../../scripts/auth.js"></script>
 </body>
 </html>
