versao estavel do backend tuss

--- a/pages/pt/login.html
+++ b/pages/pt/login.html
@@ -31,8 +31,8 @@
                 </div>
 
                 <div class="input-group">
-                    <label>Email</label>
-                    <input type="email" id="loginEmail" placeholder="oseuemail@gmail.com" required>
+                    <label>Nome de Utilizador Roblox</label>
+                    <input type="text" id="loginUsername" placeholder="Ex: 111111ricky" required>
                 </div>
                 <div class="input-group">
                     <label>Password</label>
@@ -53,10 +53,7 @@
                     <label>Roblox Username</label>
                     <input type="text" id="regUsername" placeholder="username" required>
                 </div>
-                <div class="input-group">
-                    <label>Email</label>
-                    <input type="email" id="regEmail" placeholder="oseuemail@gmail.com" required>
-                </div>
+                
                 <div class="input-group">
                     <label>Password</label>
                     <input type="password" id="regPassword" placeholder="••••••••" required>
@@ -70,6 +67,9 @@
 
     <div id="footer-container"></div>
 
-    <script src="../../scripts/script.js"></script> <script src="../../scripts/auth.js"></script>   <script src="../../scripts/login-page.js"></script> <script src="../../scripts/lang-switch.js"></script>
+    <script src="../../scripts/script.js"></script> 
+    <script src="../../scripts/auth.js"></script>   
+    <script src="../../scripts/login-page.js"></script> 
+    <script src="../../scripts/lang-switch.js"></script>
 </body>
 </html>
